--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,8 +7,10 @@
   z-index: 20;
   width: 100%;
 
+
   &--fixed,
-  &--active {
+  &--active,
+  &--lidmagnit {
     background: #fff;
     box-shadow: 0 0.42vw 1vw rgba(0, 0, 0, 0.1);
 
@@ -17,7 +19,7 @@
       color: $main-color;
     }
 
-    .header__logo path:nth-child(-n+4) {
+    .header__logo-img path {
       fill: $main-color;
     }
 
@@ -48,6 +50,11 @@
 
   }
 
+  &--lidmagnit {
+    background: transparent;
+    box-shadow: none;
+  }
+
   &__row {
     align-items: center;
     padding: 1.65vw 0;
@@ -60,7 +67,7 @@
   }
 
   &__logo-img {
-    flex: 0 0 11.3vw;
+    flex: 0 0 15.625vw;
     margin-right: 1.71875vw;
 
     svg {
@@ -74,7 +81,7 @@
     path {
       fill: #fff;
 
-      &:nth-child(n+5) {
+      &:first-child {
         fill: $accent-color;
       }
     }
@@ -145,6 +152,8 @@
   }
 }
 
+
+
 .call {
 
   &__text {
@@ -171,7 +180,8 @@
   .header {
 
     &--fixed,
-    &--active {
+    &--active,
+    &--lidmagnit {
       .header__row {
         padding: 1.3rem 0;
       }
@@ -181,9 +191,13 @@
       padding: 2.6rem 0;
     }
 
+    &__logo {
+      margin-right: 3.45rem;
+      flex: 0 0 9.3rem;
+    }
+
     &__logo-img {
-      flex: 0 0 4.4rem;
-      height: 2.268rem;
+      flex: 0 0 9.3rem;
       margin-right: 0;
 
       svg {
