--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -4,6 +4,139 @@
   padding: 16.25vw 0 6.75vw;
   background: $main-color url('../media/img/hero-bg.png') 0 0 / 100% 100% no-repeat;
 
+  &--quiz {
+    .hero__title {
+      position: relative;
+
+      &::before {
+        content: 'за 1 минуту';
+        position: absolute;
+        top: -2.4vw;
+        left: 0;
+        font-size: 1.5625vw;
+        line-height: 147%;
+        text-transform: uppercase;
+        color: #fff;
+      }
+    }
+  }
+
+  &--404 {
+    padding: 3.54vw 0 1.5625vw;
+    min-height: 49.5vw;
+    display: flex;
+    align-items: center;
+    background: $main-color url('../media/svg/404.svg') 14.22vw 12.7vw / 86vw auto no-repeat;
+
+
+    .hero__row {
+      flex-direction: column;
+      align-items: start;
+    }
+
+    .hero__title {
+      flex-basis: auto;
+      margin-bottom: 1.25vw;
+
+      &::after {
+        display: none;
+      }
+    }
+
+    .hero__btn {
+      width: fit-content;
+      padding: 1.5vw 7vw;
+
+      span {
+        font-size: 0.9375vw;
+      }
+    }
+  }
+
+  &--thanks {
+    padding: 8.8vw 0 1.5625vw;
+    min-height: 48.4375vw;
+    display: flex;
+    align-items: center;
+    background: url('../media/img/engineer.png') 77% bottom / auto 36vw no-repeat,
+      url('../media/img/callback-bg.jpg') center 0 / auto 100% no-repeat;
+
+    .hero__row {
+      flex-direction: column;
+      align-items: start;
+      max-width: 35.22vw;
+      padding-left: 1.7vw;
+    }
+
+    .hero__title {
+      flex-basis: auto;
+      margin-bottom: 1.25vw;
+      padding-right: 0;
+
+      &::after {
+        display: none;
+      }
+    }
+
+    .hero__btn {
+      width: fit-content;
+      padding: 1.5vw 7vw;
+
+      span {
+        font-size: 0.9375vw;
+      }
+    }
+  }
+
+  &--lidmagnit {
+    padding-top: 15.7vw;
+    background: #F1F5F8 url('../media/img/lidmagnit.png') right 406% / 59.8vw auto no-repeat;
+
+    .hero__row {
+      flex-direction: column;
+      align-items: start;
+      max-width: 43.23vw;
+    }
+
+    .hero__title {
+      position: relative;
+      flex-basis: auto;
+      margin-bottom: 2.7vw;
+      padding-right: 0;
+      color: $main-color;
+
+      &::after {
+        display: none;
+      }
+
+      &::before {
+        content: 'скачать бесплатно';
+        position: absolute;
+        top: -2.4vw;
+        left: 0;
+        font-size: 1.5625vw;
+        line-height: 147%;
+        text-transform: uppercase;
+        color: $main-color;
+      }
+    }
+
+    .form {
+      width: 100%;
+
+      &__row {
+        gap: 1.5625vw;
+        margin-bottom: 1.5625vw;
+      }
+
+      &__btn {
+        width: 100%;
+        margin-bottom: 1.35vw;
+      }
+    }
+
+  }
+
   &__row {
     align-items: end;
   }
@@ -25,9 +158,20 @@
     }
   }
 
+  &__label {
+    margin-bottom: 2.08vw;
+    font-size: 1.25vw;
+    line-height: 167%;
+    color: #fff;
+  }
+
   &__descr {
     position: relative;
     flex: 0 0 23.8vw;
+    min-height: 21.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     padding: 3.2vw 2.7vw 0 2.86vw;
     border-top: 0.052vw solid rgba(226, 231, 238, 0.2);
 
@@ -155,6 +299,89 @@
     padding: 8.9rem 0 2.9rem;
     background: $main-color url('../media/img/hero-bg-mobile.png') 0 0 / 100% 100% no-repeat;
 
+    &--quiz {
+      padding-top: 11.2rem;
+
+      .hero__title::before {
+        font-size: 1rem;
+        top: -2rem;
+      }
+    }
+
+    &--404 {
+      background: $main-color url('../media/svg/404.svg') 4.4rem 9.7rem/28rem auto no-repeat;
+
+      .hero__title {
+        margin-bottom: 2rem;
+      }
+
+      .hero__btn {
+        width: 100%;
+        padding: 1.6rem 3.8rem;
+
+        span {
+          font-size: 1.2rem;
+          color: #fff;
+        }
+      }
+    }
+
+    &--thanks {
+      background: url('../media/img/engineer.png') center bottom / 72% auto no-repeat,
+        url('../media/img/callback-bg.jpg') center 0 / auto 100% no-repeat;
+
+      .hero__row {
+        padding-left: 0;
+        max-width: 100%;
+        padding-bottom: 23rem;
+      }
+
+      .hero__title {
+        margin-bottom: 2rem;
+      }
+
+      .hero__btn {
+        width: 100%;
+        padding: 1.6rem 3.8rem;
+
+        span {
+          font-size: 1.2rem;
+          color: #fff;
+        }
+      }
+    }
+
+    &--lidmagnit {
+      padding-top: 10rem;
+      background: #F1F5F8 url('../media/img/lidmagnit.png') right 117% / 128% auto no-repeat;
+
+      .hero__row {
+        max-width: 100%;
+        padding-bottom: 23rem;
+      }
+
+      .hero__title {
+        margin-bottom: 2rem;
+
+        &::before {
+          top: -2rem;
+          font-size: 1rem;
+        }
+      }
+
+      .form {
+        &__row {
+          flex-direction: column;
+          gap: 1.5rem;
+          margin-bottom: 1.5rem;
+        }
+
+        &__btn {
+          margin-bottom: 1.3rem;
+        }
+      }
+    }
+
     &__row {
       flex-direction: column;
       align-items: start;
@@ -169,6 +396,11 @@
       &::after {
         display: none;
       }
+    }
+
+    &__label {
+      margin-bottom: 3rem;
+      font-size: 1.5rem;
     }
 
     &__descr {
