--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,10 +2,20 @@
 	padding-top: 2.2vw;
 	padding-bottom: 2.55vw;
 
-	&-fixed {
-		position: relative;
+	&--fixed {
+		position: fixed;
 		z-index: 5;
-		margin-top: -8%;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+	}
+
+	&--white {
+		background-color: #fff;
+	}
+
+	&--special {
+		padding: 2.13vw 0;
 	}
 
 	&__row {
@@ -57,6 +67,14 @@
 @media (max-width: 768px) {
 	.footer {
 		padding-top: 1rem;
+
+		&--fixed {
+			position: static;
+		}
+
+		&--special {
+			padding-top: 1rem;
+		}
 
 		&__row {
 			padding-right: 0;
