--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -58,6 +58,10 @@
 			width: 27vw;
 		}
 
+		&:last-child .services__text {
+			padding-right: 1.5vw;
+		}
+
 		&:nth-child(2) {
 			.services__name p {
 				width: 8.23vw;
@@ -146,40 +150,39 @@
 	}
 
 	&__text-wrap {
-		position: relative;
 		flex: 0 0 100%;
 		height: 100%;
 		padding: 2.5vw;
-
-		&::after {
-			content: '';
-			position: absolute;
-			bottom: -3vw;
-			left: 0;
-			right: 0;
-			width: 100%;
-			height: 8vw;
-			background: linear-gradient(transparent,
-					$main-color);
-			pointer-events: none;
-		}
 	}
 
 	&__text {
 		padding-right: 2.5vw;
-		padding-bottom: 2vw;
+		// padding-bottom: 2vw;
 		font-weight: 300;
 		font-size: 0.833vw;
 		line-height: 140%;
 		color: #fff;
 		height: 9.27vw;
 		overflow-y: auto;
-		-ms-overflow-style: none;
-		scrollbar-width: none;
+		scrollbar-color: $gray-2 $main-color;
+		scrollbar-width: thin;
 
 		&::-webkit-scrollbar {
-			display: none;
+			width: 0.26vw;
 		}
+
+		&::-webkit-scrollbar-track {
+			background-color: $main-color;
+			border-radius: 0.15625vw;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			border-radius: 0.15625vw;
+			background-color: $gray-2;
+		}
+
+		// -ms-overflow-style: none;
+		// scrollbar-width: none;
 
 
 		li {
@@ -297,8 +300,6 @@
 
 
 
-
-
 @media (max-width: 768px) {
 	.services {
 		padding-top: 2.2rem;
@@ -342,6 +343,10 @@
 
 			&:first-child .services__text {
 				width: auto;
+			}
+
+			&:last-child .services__text {
+				padding-right: 1.6rem;
 			}
 
 			&:nth-child(2) {
@@ -438,30 +443,21 @@
 		&__text-wrap {
 			flex-basis: 27.6rem;
 			padding: 1.6rem;
-
-			&::after {
-				bottom: -2.6rem;
-				height: 9rem;
-				background: linear-gradient(transparent, 40%,
-						rgba(black, 1));
-			}
 		}
 
 		&__text {
 			padding-right: 1.6rem;
-			// padding-bottom: 1.5rem;
-			padding-bottom: 4rem;
+			padding-bottom: 2rem;
 			font-size: 1.1rem;
 			line-height: 120%;
 			// height: 7rem;
 			height: 11rem;
+			-ms-overflow-style: none;
+			scrollbar-width: none;
 
 			&::-webkit-scrollbar {
 				display: none;
 			}
-
-			-ms-overflow-style: none;
-			scrollbar-width: none;
 
 			li {
 				padding-left: 0.8rem;
