--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -532,6 +532,10 @@
 
         span {
           background: $main-color;
+
+          &:last-child {
+            left: -0.2rem;
+          }
         }
       }
 
